# DNN_reweight

./: CMakeLists.txt  DNN_reweight.cc  DNN_reweight.py  DNN_training.py  README.md  selected_genie.npy  tki_unfold.ipynb
DNN_Eb27_example/: saved_model.pb
DNN_Eb27_example/variables/: variables.data-00000-of-00001  variables.index
cmake/: ROOTSetup.cmake
cppflow/include/cppflow/: context.h  model.h  raw_ops.h
